# haystackfm

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  benchmark-integration-plan.md  contributing.html  demo.html  introduction.html  plan.md  print.html  searcher-09f2665d.js  searchindex-84f777f5.js  toc-c3bda7e2.js  toc.html  todo.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
.pi/: taskplane.json
benches/: bench_utils.rs  construction.rs  cpu_vs_gpu.rs  locate_bench.rs  mem_bench.rs  mem_positions_bench.rs  query.rs
demo/: index.html
demo/assets/: haystackfm_bg-6RUDBjcH.wasm  index-DTxo5ToP.js
docs/: book.toml
docs/src/: SUMMARY.md  contributing.md  demo.md  introduction.md
docs/src/getting-started/: installation.md  quick-start.md
docs/src/guide/: alphabets.md  concepts.md  count-locate.md  gpu.md  (+4 more)
examples/: cpu_profile.rs
getting-started/: installation.html  quick-start.html
guide/: alphabets.html  concepts.html  count-locate.html  gpu.html  iupac.html  mem-smem.html  serialization.html  wasm.html
reference/: api.html  architecture.html  browser-support.html  feature-flags.html
shaders/: locate_resolve.wgsl  locate_search.wgsl  mem_find.wgsl  mem_resolve.wgsl  occ_scan.wgsl  ref_map.wgsl
src/: alphabet.rs  c_array.rs  lib.rs  prefetch.rs
src/bwt/: cpu.rs  gpu.rs  mod.rs
src/fm_index/: bidir.rs  bidir_index.rs  lookup.rs  mod.rs  query.rs  serialize.rs  smem.rs
src/gpu/: buffers.rs  context_cache.rs  locate.rs  mem_find.rs  mem_hit.rs  mem_resolve.rs  mod.rs  pipeline.rs  radix_sort.rs  ref_map.rs
src/occ/: cpu.rs  gpu.rs  mod.rs
src/suffix_array/: cpu.rs  mod.rs
src/wasm/: js_api.rs
tests/: bidir_correctness.rs  cpu_correctness.rs  cpu_gpu_bench_correctness.rs  cpu_gpu_equivalence.rs  gpu_correctness.rs  gpu_mem_parity.rs  gpu_mem_positions_parity.rs  locate_gpu_parity.rs  locate_iupac_parity.rs  mem_iupac_parity.rs  proptest_correctness.rs  query_tests.rs
tests/common/: mod.rs
theme/: haystackfm-922babdf.css
web/: index.html  main.ts  package-lock.json  package.json  vite.config.ts
(+4 files in other folders)
